Update configuration for globalpromonetwork.netlify.app deployment

--- a/env.example
+++ b/env.example
@@ -3,18 +3,19 @@
 
 # إعدادات التطبيق
 VITE_APP_TITLE=PromoHive
-VITE_APP_LOGO=https://your-domain.netlify.app/logo.png
-VITE_ANALYTICS_ENDPOINT=https://analytics.your-domain.com
+VITE_APP_LOGO=https://globalpromonetwork.netlify.app/logo.png
+VITE_ANALYTICS_ENDPOINT=https://analytics.globalpromonetwork.store
 VITE_ANALYTICS_WEBSITE_ID=promohive
 
 # رابط الـ API (يمكن أن يكون Netlify Functions أو سيرفر خارجي)
 VITE_API_URL=https://your-api-domain.com/api
 
 # إعدادات Cloudinary
-VITE_CLOUDINARY_CLOUD_NAME=your-cloud-name
-VITE_CLOUDINARY_API_KEY=your-api-key
-VITE_CLOUDINARY_UPLOAD_PRESET=your-preset
+VITE_CLOUDINARY_CLOUD_NAME=djplzmgtn
+VITE_CLOUDINARY_API_KEY=597557396493121
+VITE_CLOUDINARY_UPLOAD_PRESET=promohive_secure
 
 # إعدادات أخرى
 VITE_ENVIRONMENT=production
 VITE_VERSION=1.0.0
+VITE_PLATFORM_URL=https://globalpromonetwork.netlify.app
