--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.8.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/bcrypt": "^6.0.0",
