--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -3,13 +3,6 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@netlify/functions": "^2.8.1",
-    "@prisma/client": "^5.20.0",
-    "bcrypt": "^6.0.0",
-    "zod": "^4.1.12",
-    "jose": "^5.2.0"
-  },
-  "devDependencies": {
-    "prisma": "^5.20.0"
+    "@netlify/functions": "^2.8.1"
   }
 }
